nav button fixed spacing

--- a/dustedits.css
+++ b/dustedits.css
@@ -96,8 +96,7 @@ img {
   display: block;
   right: 10px;
   bottom: 10px;
-  width: 10vw;
-  min-width: 170px;
+  width: 170px;
   height: auto;
   z-index: 4;
   cursor: pointer;
